gcc/testsuite/gm2/iso/fail/simpledef1.def
DEFINITION MODULE simpledef1 ;

PROCEDURE foo ;
PROCEDURE foo ;

END simpledef1.
